--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
   width: 40%;
   padding: 10px;
   border-radius: 10px;
+  box-shadow: 0 0 20px 0px black;
 }
 
 h1 {
@@ -46,6 +47,7 @@ input {
   margin-bottom: 10px;
   padding: 5px;
   border: 1px solid rgb(240, 117, 117);
+  border-radius: 5px;
 }
 
 input:focus {
@@ -65,8 +67,9 @@ button {
   background: #000;
   color: white;
   border: none;
-  /* border-radius: 5px; */
   cursor: pointer;
+  font-family: "Roboto", sans-serif;
+  border-radius: 5px;
 }
 
 button:hover {
@@ -81,6 +84,7 @@ button:hover {
   text-align: center;
   width: 90%;
   margin: 0 auto;
+  border-radius: 5px;
 }
 
 /* Media Query */
